# s26-team3-cama

./: .gitignore  cors.json  deployment.md  eslint.config.mjs  pyproject.toml
eda/: explore_OPA_data.rmd
tasks/create-property-map-tiles/: DEPLOY.md  Dockerfile  script.sh
tasks/create_gcrf_property_tiles_info_geojson/: .env.yaml  .gitignore  DEPLOY.md  main.py  requirements.txt
tasks/extract-data/: DEPLOY.md  main.py  opa_assessments_import.py  opa_properties_import.py  pwd_parcels_import.py  real_estate_transfers_import.py  requirements.txt
tasks/extract-data/gcloud_scripts/: extract_deploy.sh  extract_test.sh  scheduler_deploy.sh  scheduler_test.sh  scheduler_update.sh  workflow_deploy.sh  workflow_test.sh
tasks/extract-data/scripts_extract/: extract_opa_assessments.py  extract_opa_properties.py  extract_pwd_parcels.py  extract_real_estate_transfers.py  extract_schools.py  extract_septa_stops.py  (+1 more)
tasks/generate-assessment-chart-configs/: DEPLOY.md  main.py  requirements.txt
tasks/generate-property-map-tiles/: DEPLOY.md  script.sh
tasks/run-sql/: DEPLOY.md  main.py  requirements.txt
tasks/style_vector_tile_recent_tax_year_assessment/: .eslintrc.json  index.html  scripts.js  style.css
tasks/transform-current-assessment-bins/: DEPLOY.md  create_derived_current_assessment_bins.sql  main.py
tasks/transform-tax-year-assessment-bins/: DEPLOY.md  create_derived_tax_year_assessment_bins.sql
tasks/workflow-deployment/: DEPLOY.md
ui/: index.html
ui/reviewer/: index.html  script.js  styles.css
ui/widget/: index.html  script.js  styles.css
(+34 files in other folders)
