[project]
name = "cama"
version = "1.0.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "functions-framework>=3.10.1",
    "geopandas>=1.0.1",
    "google-cloud-storage>=3.9.0",
    "ipykernel>=6.31.0",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "sqlfluff>=4.0.4,<5",
    "flake8>=7.3.0,<8",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
